Feat/add dockerfile (#4)
